k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerave-be
  labels:
    app: cerave-be
spec:
  selector:
    matchLabels:
      app: cerave-be
  template:
    metadata:
      labels:
        app: cerave-be
    spec:
      enableServiceLinks: false
      nodeSelector:
        kubernetes.azure.com/agentpool: backend
      containers:
      - image: swr.af-south-1.myhuaweicloud.com/tooling/cerave-be:latest
        name: cerave-be
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
        resources:
          limits:
            cpu: "1000m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 512Mi
