k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerave-be
  labels:
    app: cerave-be
spec:
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: cerave-be
  type: LoadBalancer
